<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
    android:id="@+id/guide_item"
    android:icon="@drawable/ic_help"
    android:title="@string/drawer_title_guide"
    app:showAsAction="never" />
  <item
    android:id="@+id/feedback_item"
    android:icon="@drawable/ic_chat_bubble"
    android:title="@string/drawer_title_feedback"
    app:showAsAction="never" />
  <item
    android:id="@+id/settings_item"
    android:icon="@drawable/ic_baseline_settings_24"
    android:title="@string/settings"
    app:showAsAction="never" />
  <item
    android:id="@+id/imprint_item"
    android:icon="@drawable/ic_business"
    android:title="@string/drawer_title_imprint"
    app:showAsAction="never" />
  <!-- FIXME: Disabled as this breaks upload (unauthorized) after login [RFR-564] -->
  <item
    android:id="@+id/logout_item"
    android:icon="@drawable/ic_logout"
    android:title="@string/drawer_title_logout"
    app:showAsAction="never" />
</menu>