<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
    android:id="@+id/action_sync"
    android:icon="@drawable/ic_baseline_cloud_upload_24"
    android:title="@string/upload_all"
    app:showAsAction="never" />
  <!--item
      android:id="@+id/export_menu_item"
      android:title="@string/title_menu_item_export"
      app:showAsAction="never" /-->
  <item
    android:id="@+id/select_all_item"
    android:title="@string/mark_all_menu_item"
    app:showAsAction="never" />
  <item
    android:id="@+id/delete_measurement_item"
    android:icon="@android:drawable/ic_menu_delete"
    android:title="@string/delete_marked_menu_item"
    android:visible="true"
    app:showAsAction="never" />
</menu>