<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="de.cyface.app.utils.statistics.StatisticsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/activity_horizontal_margin">

        <TextView
          android:id="@+id/length_title"
          app:layout_constraintTop_toTopOf="parent"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/activity_vertical_margin"
          android:paddingBottom="@dimen/activity_vertical_margin"
          android:text="@string/max_length"/>

        <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/distance"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@+id/length_title"
          android:layout_marginStart="@dimen/activity_horizontal_margin"
          android:paddingBottom="@dimen/activity_vertical_margin">
            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="@id/distance"
              app:layout_constraintLeft_toLeftOf="parent"
              android:text="@string/distance"
              android:textAppearance="?attr/textAppearanceSubtitle1"/>
            <TextView
              android:id="@+id/distanceView"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="@id/distance"
              app:layout_constraintRight_toRightOf="parent"
              android:layout_marginEnd="@dimen/activity_horizontal_margin"
              android:textAppearance="?attr/textAppearanceSubtitle1" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/duration"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@+id/distance"
          android:layout_marginStart="@dimen/activity_horizontal_margin"
          android:paddingBottom="@dimen/activity_vertical_margin">
            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="@id/duration"
              app:layout_constraintLeft_toLeftOf="parent"
              android:text="@string/duration"
              android:textAppearance="?attr/textAppearanceSubtitle1"/>
            <TextView
              android:id="@+id/durationView"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="@id/duration"
              app:layout_constraintRight_toRightOf="parent"
              android:layout_marginEnd="@dimen/activity_horizontal_margin"
              android:textAppearance="?attr/textAppearanceSubtitle1" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
          android:id="@+id/elevation_title"
          app:layout_constraintTop_toBottomOf="@+id/duration"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/activity_vertical_margin"
          android:text="@string/elevation"/>

        <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/ascent"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@+id/elevation_title"
          android:paddingTop="@dimen/activity_vertical_margin"
          android:layout_marginStart="@dimen/activity_horizontal_margin"
          android:paddingBottom="@dimen/activity_vertical_margin">
            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="@id/ascent"
              app:layout_constraintLeft_toLeftOf="parent"
              android:text="@string/ascend"
              android:textAppearance="?attr/textAppearanceSubtitle1"/>
            <TextView
              android:id="@+id/ascendView"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="@id/ascent"
              app:layout_constraintRight_toRightOf="parent"
              android:layout_marginEnd="@dimen/activity_horizontal_margin"
              android:textAppearance="?attr/textAppearanceSubtitle1" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
          android:id="@+id/co2_title"
          app:layout_constraintTop_toBottomOf="@+id/ascent"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/activity_vertical_margin"
          android:paddingBottom="@dimen/activity_vertical_margin"
          android:text="@string/avoided_co2"/>

        <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/total_co2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@+id/co2_title"
          android:layout_marginStart="@dimen/activity_horizontal_margin"
          android:paddingBottom="@dimen/activity_vertical_margin">
            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="@id/total_co2"
              app:layout_constraintLeft_toLeftOf="parent"
              android:text="@string/total"
              android:textAppearance="?attr/textAppearanceSubtitle1"/>
            <TextView
              android:id="@+id/totalCo2View"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="@id/total_co2"
              app:layout_constraintRight_toRightOf="parent"
              android:layout_marginEnd="@dimen/activity_horizontal_margin"
              android:textAppearance="?attr/textAppearanceSubtitle1" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/average_co2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@+id/total_co2"
          android:layout_marginStart="@dimen/activity_horizontal_margin"
          android:paddingBottom="@dimen/activity_vertical_margin">
            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="@id/average_co2"
              app:layout_constraintLeft_toLeftOf="parent"
              android:text="@string/maximum"
              android:textAppearance="?attr/textAppearanceSubtitle1"/>
            <TextView
              android:id="@+id/max_co_2_view"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="@id/average_co2"
              app:layout_constraintRight_toRightOf="parent"
              android:layout_marginEnd="@dimen/activity_horizontal_margin"
              android:textAppearance="?attr/textAppearanceSubtitle1" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>